--- a/notes_link_7205v200_hi3536ev100.md
+++ b/notes_link_7205v200_hi3536ev100.md
@@ -6,4 +6,7 @@
 
 ## Возможности
 
-Данный линк способен передавать видео с воздушной части форматом (разрешение@частота кадров) 1920x1080@30 или 1200x720@50 кодеками h264 либо h265. 
+Данный линк способен передавать видео с воздушной части форматом (разрешение@частота кадров) 1920x1080@30 или 1200x720@50 кодеками h264 либо h265 и телеметрию mavlink в обе стороны. Общая схема процессов для передачи видео выглядит так:
+
+![video](https://github.com/OpenIPC/sandbox-fpv/raw/master/notes_files/telemetry.png)
+
