--- a/notes_link_7205v200_hi3536ev100.md
+++ b/notes_link_7205v200_hi3536ev100.md
@@ -8,5 +8,6 @@
 
 Данный линк способен передавать видео с воздушной части форматом (разрешение@частота кадров) 1920x1080@30 или 1200x720@50 кодеками h264 либо h265 и телеметрию mavlink в обе стороны. Общая схема процессов для передачи видео выглядит так:
 
-![video](https://github.com/OpenIPC/sandbox-fpv/raw/master/notes_files/telemetry.png)
+![video](https://github.com/OpenIPC/sandbox-fpv/raw/master/notes_files/video.png)
 
+Передача видео на текущий момент возможна двумя способами. Классический - streamer *majestic* через udp порт 5600 засылает RTP/h264 или RTP/h265 поток  в [wfb-ng](https://github.com/svpcom/wfb-ng) для передачи на землю, где принимается ответной частью wfb-ng и отправляется для воспроизведения на PC или планшет / смартфон по LAN или USB ethernet (tethering). Формат RTP свободно воспроизводится программами для GS, такими как [QGroundControl](https://github.com/mavlink/qgroundcontrol), [Mission Planner](https://ardupilot.org/planner/) или [FPV-VR](https://github.com/Consti10/FPV_VR_OS). Но его пока невозможно вывести в порт HDMI регистратора, поскольку он построен на специализированном чипе со своим SDK и обычными способами, например через GStreamer как обычно выводят видео в случае Raspberry Pi, этого не сделать. Alexey Bezborodov из команды OpenIPC предоставил на тесты скомпилированные примеры *vencoder* и *vdecoder*, вытащенные из Hisilicon SDK и в оригинальном виде расположенные [тут](https://github.com/OpenIPC/silicon_research). VENC запускается на камере и формирует поток h264 с фрагментацией HAL вместо majestic, VDEC на регистраторе выводит этот поток в HDMI. Все работает, но естественно нет OSD и подобный нестандартный поток невозможно воспроизвести сторонними плеерами.
