--- a/notes_link_7205v200_hi3536ev100.md
+++ b/notes_link_7205v200_hi3536ev100.md
@@ -10,4 +10,9 @@
 
 ![video](https://github.com/OpenIPC/sandbox-fpv/raw/master/notes_files/video.png)
 
-Передача видео на текущий момент возможна двумя способами. Классический - streamer *majestic* через udp порт 5600 засылает RTP/h264 или RTP/h265 поток  в [wfb-ng](https://github.com/svpcom/wfb-ng) для передачи на землю, где принимается ответной частью wfb-ng и отправляется для воспроизведения на PC или планшет / смартфон по LAN или USB ethernet (tethering). Формат RTP свободно воспроизводится программами для GS, такими как [QGroundControl](https://github.com/mavlink/qgroundcontrol), [Mission Planner](https://ardupilot.org/planner/) или [FPV-VR](https://github.com/Consti10/FPV_VR_OS). Но его пока невозможно вывести в порт HDMI регистратора, поскольку он построен на специализированном чипе со своим SDK и обычными способами, например через GStreamer как обычно выводят видео в случае Raspberry Pi, этого не сделать. Alexey Bezborodov из команды OpenIPC предоставил на тесты скомпилированные примеры *vencoder* и *vdecoder*, вытащенные из Hisilicon SDK и в оригинальном виде расположенные [тут](https://github.com/OpenIPC/silicon_research). VENC запускается на камере и формирует поток h264 с фрагментацией HAL вместо majestic, VDEC на регистраторе выводит этот поток в HDMI. Все работает, но естественно нет OSD и подобный нестандартный поток невозможно воспроизвести сторонними плеерами.
+Передача видео на текущий момент возможна двумя способами. Классический - streamer *majestic* через udp порт 5600 засылает RTP/h264 или RTP/h265 поток  в [wfb-ng](https://github.com/svpcom/wfb-ng) для передачи на землю, где принимается ответной частью wfb-ng и отправляется для воспроизведения на PC или планшет / смартфон по LAN или USB ethernet (tethering). Формат RTP свободно воспроизводится программами для GS, такими как [QGroundControl](https://github.com/mavlink/qgroundcontrol), [Mission Planner](https://ardupilot.org/planner/) или [FPV-VR](https://github.com/Consti10/FPV_VR_OS). Но его пока невозможно вывести в порт HDMI регистратора, поскольку он построен на специализированном чипе со своим SDK и обычными способами, например через *GStreamer* как обычно выводят видео в случае Raspberry Pi, этого не сделать. Alexey Bezborodov из команды OpenIPC предоставил на тесты скомпилированные примеры *vencoder* и *vdecoder*, вытащенные из Hisilicon SDK и в оригинальном виде расположенные [тут](https://github.com/OpenIPC/silicon_research). *VENC* запускается на камере и формирует поток h264 с фрагментацией HAL вместо *majestic*, *VDEC* на регистраторе выводит этот поток в HDMI. Все работает, но естественно нет OSD и подобный нестандартный поток невозможно воспроизвести сторонними плеерами.
+
+Этот вопрос можно решить, "научив" *vdecoder* распознавать RTP/h26[4-5] с помощью библиотеки *libavformat/avformat.h* и по прежнему "стримить" на камере через *majestic*. Для этого нужна помощь программиста C++, если вы желаете помочь проекту с этим - [обращайтесь](https://t.me/+BMyMoolVOpkzNWUy).
+
+Пример настройки *GStreamer* на Mission Planner для воспроизведения h265: `udpsrc port=5600 buffer-size=90000 ! application/x-rtp ! rtph265depay ! avdec_h265 ! videoconvert ! video/x-raw,format=BGRA ! appsink name=outsink
+`
