--- a/notes_link_7205v200_hi3536ev100.md
+++ b/notes_link_7205v200_hi3536ev100.md
@@ -10,7 +10,11 @@
 
 ![video](https://github.com/OpenIPC/sandbox-fpv/raw/master/notes_files/video.png)
 
-Передача видео на текущий момент возможна двумя способами. Классический - streamer *majestic* через udp порт 5600 засылает RTP/h264 или RTP/h265 поток  в [wfb-ng](https://github.com/svpcom/wfb-ng) для передачи на землю, где принимается ответной частью wfb-ng и отправляется для воспроизведения на PC или планшет / смартфон по LAN или USB ethernet (tethering). Формат RTP свободно воспроизводится программами для GS, такими как [QGroundControl](https://github.com/mavlink/qgroundcontrol), [Mission Planner](https://ardupilot.org/planner/) или [FPV-VR](https://github.com/Consti10/FPV_VR_OS). Но его пока невозможно вывести в порт HDMI регистратора, поскольку он построен на специализированном чипе со своим SDK и обычными способами, например через *GStreamer* как обычно выводят видео в случае Raspberry Pi, этого не сделать. Alexey Bezborodov из команды OpenIPC предоставил на тесты скомпилированные примеры *vencoder* и *vdecoder*, вытащенные из Hisilicon SDK и в оригинальном виде расположенные [тут](https://github.com/OpenIPC/silicon_research). *VENC* запускается на камере и формирует поток h264 с фрагментацией HAL вместо *majestic*, *VDEC* на регистраторе выводит этот поток в HDMI. Все работает, но естественно нет OSD и подобный нестандартный поток невозможно воспроизвести сторонними плеерами.
+Передача видео на текущий момент возможна двумя способами. Классический - streamer *majestic* через udp порт 5600 засылает RTP/h264 или RTP/h265 поток  в [wfb-ng](https://github.com/svpcom/wfb-ng) для передачи на землю, где принимается ответной частью wfb-ng и отправляется для воспроизведения на PC или планшет / смартфон по LAN или USB ethernet (tethering). Формат RTP свободно воспроизводится программами для GS, такими как [QGroundControl](https://github.com/mavlink/qgroundcontrol), [Mission Planner](https://ardupilot.org/planner/) или [FPV-VR](https://github.com/Consti10/FPV_VR_OS). Но его пока невозможно вывести в порт HDMI регистратора, поскольку он построен на специализированном чипе со своим SDK и обычными способами, например через *GStreamer* как обычно выводят видео в случае Raspberry Pi, этого не сделать.
+
+<sub>QGroundControl имеет баг при воспроизведении h265, проявляющийся в зависании картинки при входе в меню. Это лечится до перезапуска программы выбором потока видео h264 и назад h265.</sub>
+
+Alexey Bezborodov из команды OpenIPC предоставил на тесты скомпилированные примеры *vencoder* и *vdecoder*, вытащенные из Hisilicon SDK и в оригинальном виде расположенные [тут](https://github.com/OpenIPC/silicon_research). *VENC* запускается на камере и формирует поток h264 с фрагментацией HAL вместо *majestic*, *VDEC* на регистраторе выводит этот поток в HDMI. Все работает, но естественно нет OSD и подобный нестандартный поток невозможно воспроизвести сторонними плеерами. Это очень перспективный путь, поскольку имеет возможности к снижению задержки передачи видео. На текущий момент она составляет от 110 до 130 мсек. На "классической схеме" задержки составляют обычно от 150 до 230 мсек, в зависимости от разрешения и наземных условий воспроизведения.
 
 Этот вопрос можно решить, "научив" *vdecoder* распознавать RTP/h26[4-5] с помощью библиотеки *libavformat/avformat.h* и по прежнему "стримить" на камере через *majestic*. Для этого нужна помощь программиста C++, если вы желаете помочь проекту с этим - [обращайтесь](https://t.me/+BMyMoolVOpkzNWUy).
 
