--- a/notes_link_7205v200_hi3536ev100.md
+++ b/notes_link_7205v200_hi3536ev100.md
@@ -4,7 +4,7 @@
 Воздушная часть линка представляет из себя камеру gk7205v200 с подключенным по USB wifi-адаптером на чипе rtl8812au, например ASUS USB AC-56.
 Наземная часть - это видеорегистратор на базе чипа hisilicon hi3536dv100 либо ev100, к которому точно так же подключен по USB адаптер rtl8812au или rtl8814au.
 
-## Возможности
+### Возможности
 
 Данный линк способен передавать видео с воздушной части форматом (разрешение@частота кадров) 1920x1080@30 или 1200x720@50 кодеками h264 либо h265 и телеметрию mavlink в обе стороны. Общая схема процессов для передачи видео выглядит так:
 
@@ -20,3 +20,9 @@ Alexey Bezborodov из команды OpenIPC предоставил на тес
 
 Пример настройки *GStreamer* на Mission Planner для воспроизведения h265: `udpsrc port=5600 buffer-size=90000 ! application/x-rtp ! rtph265depay ! avdec_h265 ! videoconvert ! video/x-raw,format=BGRA ! appsink name=outsink
 `
+
+### Нюансы передачи видео на камере
+
+Для данной камеры существует два драйвера сенсора - "медленный" 1080p@30fps и "быстрый" 720p@50fps. Их можно переключать на ходу скриптами из примеров в root, если залить на камеру "быстрый" драйвер под отдельным именем и исправить к нему путь в его конфиге `60fps/720p_imx307_i2c_2l.ini`. Все файлы по данной камере находятся в каталоге `gk7205v200`. Если запускать камеру с "быстрым" драйвером в настройках majestic, то передача видео идет рывками, поэтому при старте камеры через `S95goke` прописываются настройки "медленного" драйвера, после чего уже можно включить "быстрый". На текущий момент ведется работа по управлению подобными настройками камеры через RC каналы в mavlink.
+
+
